--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.588.0",
+    "@hono/swagger-ui": "^0.4.0",
+    "@hono/zod-openapi": "^0.15.1",
     "dotenv": "^16.4.5",
     "hono": "^4.4.2",
     "jsonwebtoken": "^9.0.2",
